fix alignment

--- a/src/app/components/toolbar/toolbar.component.scss
+++ b/src/app/components/toolbar/toolbar.component.scss
@@ -29,6 +29,10 @@
     }
 }
 
+.left__links, .right__links {
+    margin: auto 0;
+}
+
 .profile__image {
         width: 32px;
         height: 32px;
